Calling python service to get recommendations